--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,8 @@
+
 {
+    "name": "localheinz/symfony-live-berlin-2019-doctrine-tutorial",
+    "description": "An application used for Marco Pivettas workshop during SymfonyLive 2019 in Berlin.",
+    "license": "MIT",
     "require": {
         "php": "^7.1",
         "ext-pdo_sqlite": "*",
