--- a/composer.json
+++ b/composer.json
@@ -5,19 +5,19 @@
     "require": {
         "php": "^7.1",
         "ext-pdo_sqlite": "*",
+        "doctrine/data-fixtures": "^1.3.0",
         "doctrine/dbal": "^2.7.1",
-        "doctrine/orm": "^2.6.1",
-        "doctrine/data-fixtures": "^1.3.0"
+        "doctrine/orm": "^2.6.1"
+    },
+    "require-dev": {
+        "behat/behat": "^3.4.3",
+        "localheinz/composer-normalize": "^1.3.0",
+        "phpunit/phpunit": "^7.1.5"
     },
     "autoload": {
         "psr-4": {
             "Authentication\\": "src/Authentication"
         }
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^7.1.5",
-        "behat/behat": "^3.4.3",
-        "localheinz/composer-normalize": "^1.3.0"
     },
     "autoload-dev": {
         "psr-4": {
