--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
         "localheinz/composer-normalize": "^1.3.0",
         "phpunit/phpunit": "^7.1.5"
     },
+    "config": {
+        "sort-packages": true
+    },
     "autoload": {
         "psr-4": {
             "Authentication\\": "src/Authentication"
