--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require-dev": {
         "behat/behat": "^3.5.0",
         "localheinz/composer-normalize": "^1.3.0",
+        "localheinz/php-cs-fixer-config": "^1.23.0",
         "phpunit/phpunit": "^8.3.5"
     },
     "config": {
