--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     },
     "require-dev": {
         "behat/behat": "^3.5.0",
+        "fzaninotto/faker": "^1.8.0",
         "localheinz/composer-normalize": "^1.3.0",
         "localheinz/php-cs-fixer-config": "^1.23.0",
         "phpunit/phpunit": "^8.3.5"
