--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "fzaninotto/faker": "^1.8.0",
         "localheinz/composer-normalize": "^1.3.0",
         "localheinz/php-cs-fixer-config": "^1.23.0",
+        "localheinz/test-util": "~0.7.0",
         "phpunit/phpunit": "^8.3.5"
     },
     "config": {
