--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "ext-pdo_sqlite": "*",
         "doctrine/data-fixtures": "^1.3.0",
         "doctrine/dbal": "^2.7.1",
-        "doctrine/orm": "^2.6.1"
+        "doctrine/orm": "^2.6.1",
+        "guzzlehttp/guzzle": "^6.3.3"
     },
     "require-dev": {
         "behat/behat": "^3.5.0",
