--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
+        "ext-json": "*",
         "ext-pdo_sqlite": "*",
         "doctrine/data-fixtures": "^1.3.0",
         "doctrine/dbal": "^2.7.1",
