--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Authentication\\": "src/Authentication"
+            "Domain\\": "src/Domain",
+            "Infrastructure\\": "src/Infrastructure"
         }
     },
     "autoload-dev": {
