--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "localheinz/composer-normalize": "^1.3.0",
         "localheinz/php-cs-fixer-config": "^1.23.0",
         "localheinz/test-util": "~0.7.0",
-        "phpunit/phpunit": "^8.3.5"
+        "phpunit/phpunit": "^8.3.5",
+        "sensiolabs-de/deptrac-shim": "~0.5.0"
     },
     "config": {
         "sort-packages": true
