Enhancement: Fetch Users from Container

--- a/depfile.yml
+++ b/depfile.yml
@@ -2,6 +2,11 @@ exclude_files:
   - .*test.*
 
 layers:
+  - name: Application
+    collectors:
+      - type: className
+        regex: Application\/.*
+
   - name: Domain
     collectors:
       - type: className
@@ -18,5 +23,9 @@ paths:
 ruleset:
   Domain: ~
 
+  Application:
+    - Domain
+
   Infrastructure:
+    - Application
     - Domain
