--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     },
     "autoload": {
         "psr-4": {
+            "Application\\": "src/Application",
             "Domain\\": "src/Domain",
             "Infrastructure\\": "src/Infrastructure"
         }
