--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
         "localheinz/composer-normalize": "^1.3.0",
         "localheinz/php-cs-fixer-config": "^1.23.0",
         "localheinz/test-util": "~0.7.0",
+        "phpstan/phpstan": "~0.11.16",
+        "phpstan/phpstan-deprecation-rules": "~0.11.2",
+        "phpstan/phpstan-strict-rules": "~0.11.1",
         "phpunit/phpunit": "^8.3.5",
         "sensiolabs-de/deptrac-shim": "~0.5.0"
     },
