--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "fzaninotto/faker": "^1.8.0",
         "localheinz/composer-normalize": "^1.3.0",
         "localheinz/php-cs-fixer-config": "^1.23.0",
+        "localheinz/phpstan-rules": "~0.12.2",
         "localheinz/test-util": "~0.7.0",
         "phpstan/phpstan": "~0.11.16",
         "phpstan/phpstan-deprecation-rules": "~0.11.2",
