--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
         "ext-pdo_sqlite": "*",
         "doctrine/data-fixtures": "^1.3.2",
         "doctrine/dbal": "^2.9.2",
-        "doctrine/orm": "^2.6.4",
-        "guzzlehttp/guzzle": "^6.3.3"
+        "doctrine/orm": "^2.6.4"
     },
     "require-dev": {
         "behat/behat": "^3.5.0",
